# list-of-mcp-server

./: .gitignore  README.md
3-simple-server-setup/: README.md  client-sse.py  client-stdio.py  client-streamable-http.py  main.py  pyproject.toml  server.py
4-geminiai-integration/: .env.example  client-simple.py  client.py  requirements.txt  server.py
4.1-openai-integration/: .env.example  client.py  main.py  server.py
5-PP-data/: Dockerfile  README.md  client.py  main.py  pyproject.toml  requirements.txt  server.py
5.1-PP-data/: README.md  client.py  debug_client.py  mcp_server_helpertool.py  mcp_server_openapi.py  pyproject.toml  requirements.txt  server.py  server_2.py  session_logger.py  test_direct_api.py
5.2-PP-data/: .dockerignore  .env.example  Dockerfile  MEMORY_IMPLEMENTATION_COMPLETE.md  README.md  client.py  debug_test.py  main.py  mcp_server_openapi.py  pyproject.toml  requirements.txt
5.2-PP-data-fastapi-UI/: Dockerfile  computesphere_api.py  pyproject.toml  requirements.txt  test_chat_api.py
5.2-PP-data-fastapi-UI/k8s/: deployment.yaml  service-ingress.yaml
5.2-PP-data-fastapi-UI/monitoring/: monitoring.yaml  values.yaml
5.2-PP-data-fastapi-UI/templates/: chat.html  dashboard.html  main.html  server_comm.html
5.2-PP-data/k8s/: k8s-computesphere-agent.yaml  open.yaml  otel-values.yaml  values.yaml
5.3-PP-data/: .env.example  client.py  mcp_server_openapi.py  pyproject.toml  requirements.txt
5.3-PP-data/5.2-PP-data/: client.py  mcp_server_openapi.py  requirements.txt
6.0-bedrock/: main.py  pyproject.toml
6.0-bedrock-agentcore/: main.py  pyproject.toml  requirements.txt
6.01-open-api/: README.md  main.py  pyproject.toml  server-openai.py
6.02-A2A-MCP-server/: .env.example  README.md  a2a-server.py  main.py  pyproject.toml  start_agents.sh  stop_agents.sh
6.02-A2A-MCP-server/list-of-mcp/: math_mcp_radian_server.py  math_mcp_server.py  search_mcp_google_notifier.py  search_mcp_server.py
6.02-A2A-MCP-server/math-agent/: math-agent.py
6.02-A2A-MCP-server/orchestrator-agent/: orchestrator.py
6.02-A2A-MCP-server/research-agent/: research-agent.py
6.03-Agent-core-agentRuntime/: Dockerfile  main.py  requirements.txt
7.0.1-cai-cybersecurity-agent/: .dockerignore  .env.example  CONFIGURATION.md  DEPLOYMENT.md  DOCKER.md  DOCKER_BUILD.md  QUICKREF.md  (+12 more)
(+246 files in other folders)
