[project]
name = "5.2-pp-data-fastapi-ui"
version = "0.1.0"
description = "FastAPI UI project"
authors = [{ name = "Your Name" }]
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
